Cleanup: whitespace, newlines, foreach, unboxing.
Message:
	Redundant unboxing on bb.readInt().
	Remove commented logging.
	Redundant PeerContext cast.

Serializer:
	Remove comment about Key.write() as it's not statically accessible.
	Remove commented VeryLongInteger support.